Fix main page on small screens

--- a/web/src/pages/index.module.css
+++ b/web/src/pages/index.module.css
@@ -25,4 +25,6 @@
 main {
   margin: 1.5em auto;
   display: inline-block;
+  max-width: 100%;
+  padding: 0 var(--ifm-spacing-horizontal);
 }
